// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography variant "bodyA" renders correctly 1`] = `
<DocumentFragment>
  .cache-7vgu14 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

<p
    class="e1g1zfwd0 cache-7vgu14 e7ah3bn0"
  >
    bodyA
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyA" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-ooshkx {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-ooshkx.cache-ooshkx {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-ooshkx e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" renders correctly 1`] = `
<DocumentFragment>
  .cache-mr8t9x {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

<p
    class="e1g1zfwd0 cache-mr8t9x e7ah3bn0"
  >
    bodyB
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-15jlmfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-15jlmfb.cache-15jlmfb {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-15jlmfb e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" renders correctly 1`] = `
<DocumentFragment>
  .cache-16mbdob {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<p
    class="e1g1zfwd0 cache-16mbdob e7ah3bn0"
  >
    bodyC
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-pp49ys {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-pp49ys.cache-pp49ys {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-pp49ys e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" renders correctly 1`] = `
<DocumentFragment>
  .cache-1yyuklh {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

<p
    class="e1g1zfwd0 cache-1yyuklh e7ah3bn0"
  >
    bodyD
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1jzo2oo {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1jzo2oo.cache-1jzo2oo {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-1jzo2oo e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "command" renders correctly 1`] = `
<DocumentFragment>
  .cache-1grrt3w {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 8px;
}

<code
    class="e1g1zfwd0 cache-1grrt3w e7ah3bn0"
  >
    command
  </code>
</DocumentFragment>
`;

exports[`Typography variant "command" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-696pri {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 8px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-696pri.cache-696pri {
  width: 100px;
}

<code
    class="e1g1zfwd0 cache-696pri e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "default" renders correctly 1`] = `
<DocumentFragment>
  .cache-1p5epqj {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="e1g1zfwd0 cache-1p5epqj e7ah3bn0"
  >
    default
  </div>
</DocumentFragment>
`;

exports[`Typography variant "default" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1cdfzpj {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1cdfzpj.cache-1cdfzpj {
  width: 100px;
}

<div
    class="e1g1zfwd0 cache-1cdfzpj e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "description" renders correctly 1`] = `
<DocumentFragment>
  .cache-3f5iua {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

<p
    class="e1g1zfwd0 cache-3f5iua e7ah3bn0"
  >
    description
  </p>
</DocumentFragment>
`;

exports[`Typography variant "description" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-j66s28 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-j66s28.cache-j66s28 {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-j66s28 e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "hero" renders correctly 1`] = `
<DocumentFragment>
  .cache-1v3wchc {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
}

<h1
    class="e1g1zfwd0 cache-1v3wchc e7ah3bn0"
  >
    hero
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "hero" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1yikwoy {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1yikwoy.cache-1yikwoy {
  width: 100px;
}

<h1
    class="e1g1zfwd0 cache-1yikwoy e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "lead" renders correctly 1`] = `
<DocumentFragment>
  .cache-lz3ekf {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

<h2
    class="e1g1zfwd0 cache-lz3ekf e7ah3bn0"
  >
    lead
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-u1ohvn {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-u1ohvn.cache-u1ohvn {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-u1ohvn e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" renders correctly 1`] = `
<DocumentFragment>
  .cache-kojgy6 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

<h2
    class="e1g1zfwd0 cache-kojgy6 e7ah3bn0"
  >
    lead-block
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1kt037u {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1kt037u.cache-1kt037u {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-1kt037u e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" renders correctly 1`] = `
<DocumentFragment>
  .cache-kl97tl {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
}

<h2
    class="e1g1zfwd0 cache-kl97tl e7ah3bn0"
  >
    lead-text
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1q4bf1o {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1q4bf1o.cache-1q4bf1o {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-1q4bf1o e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "link" renders correctly 1`] = `
<DocumentFragment>
  .cache-1ejj107 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
}

.cache-1ejj107:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="e1g1zfwd0 cache-1ejj107 e7ah3bn0"
  >
    link
  </div>
</DocumentFragment>
`;

exports[`Typography variant "link" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-mgrrgl {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-mgrrgl.cache-mgrrgl {
  width: 100px;
}

.cache-mgrrgl:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="e1g1zfwd0 cache-mgrrgl e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" renders correctly 1`] = `
<DocumentFragment>
  .cache-dxgc3v {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
}

<code
    class="e1g1zfwd0 cache-dxgc3v e7ah3bn0"
  >
    samplecode
  </code>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-18o53tl {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-18o53tl.cache-18o53tl {
  width: 100px;
}

<code
    class="e1g1zfwd0 cache-18o53tl e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "tiny" renders correctly 1`] = `
<DocumentFragment>
  .cache-1jn09rr {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
}

<small
    class="e1g1zfwd0 cache-1jn09rr e7ah3bn0"
  >
    tiny
  </small>
</DocumentFragment>
`;

exports[`Typography variant "tiny" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-vlrsx0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-vlrsx0.cache-vlrsx0 {
  width: 100px;
}

<small
    class="e1g1zfwd0 cache-vlrsx0 e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </small>
</DocumentFragment>
`;

exports[`Typography variant "title" renders correctly 1`] = `
<DocumentFragment>
  .cache-16uswre {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
}

<h3
    class="e1g1zfwd0 cache-16uswre e7ah3bn0"
  >
    title
  </h3>
</DocumentFragment>
`;

exports[`Typography variant "title" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-futsz6 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-futsz6.cache-futsz6 {
  width: 100px;
}

<h3
    class="e1g1zfwd0 cache-futsz6 e7ah3bn0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h3>
</DocumentFragment>
`;

exports[`Typography with maxLines renders correctly 1`] = `
<DocumentFragment>
  .cache-1dcccyo {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  -webkit-display: -webkit-box;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

<p
    class="e1g1zfwd0 cache-1dcccyo e7ah3bn0"
  >
    Hello
  </p>
</DocumentFragment>
`;

exports[`Typography with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-1dcccyo {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  -webkit-display: -webkit-box;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.cache-16uswre {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
}

<p
    class="e1g1zfwd0 cache-1dcccyo e7ah3bn0"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="e1g1zfwd0 cache-16uswre e7ah3bn0"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </p>
</DocumentFragment>
`;
